# GameEngine

./: .gitignore  CMakeLists.txt  main.cpp
engine/: Engine.cpp  Engine.h  EngineConfigLoader.cpp  EngineConfigLoader.h
engine/config/: EngineConfig.h
game/: Game.cpp  Game.h  GameCfg.h
sdlutils/: AssetLoader.cpp  AssetLoader.h  InputEvent.cpp  InputEvent.h  MonitorWindow.cpp  MonitorWindow.h  Renderer.cpp  Renderer.h  SDLLoader.cpp  SDLLoader.h  Texture.cpp  Texture.h
sdlutils/config/: MonitorWindowCfg.h
utils/drawing/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
